tests/ui/closures/2229_closure_analysis/repr_packed.stderr
error: First Pass analysis includes:
  --> $DIR/repr_packed.rs:15:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let z1: &u8 = &foo.x;
...  |
LL | |         println!("({}, {})", z1, z2);
LL | |     };
   | |_____^
   |
note: Capturing foo[] -> Immutable
  --> $DIR/repr_packed.rs:18:24
   |
LL |         let z1: &u8 = &foo.x;
   |                        ^^^^^
note: Capturing foo[] -> Mutable
  --> $DIR/repr_packed.rs:20:32
   |
LL |         let z2: &mut u8 = &mut foo.y;
   |                                ^^^^^

error: Min Capture analysis includes:
  --> $DIR/repr_packed.rs:15:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let z1: &u8 = &foo.x;
...  |
LL | |         println!("({}, {})", z1, z2);
LL | |     };
   | |_____^
   |
note: Min Capture foo[] -> Mutable
  --> $DIR/repr_packed.rs:20:32
   |
LL |         let z2: &mut u8 = &mut foo.y;
   |                                ^^^^^

error: First Pass analysis includes:
  --> $DIR/repr_packed.rs:43:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let z1: &String = &foo.x;
...  |
LL | |         println!("({}, {})", z1, z2);
LL | |     };
   | |_____^
   |
note: Capturing foo[] -> Immutable
  --> $DIR/repr_packed.rs:46:28
   |
LL |         let z1: &String = &foo.x;
   |                            ^^^^^
note: Capturing foo[] -> Mutable
  --> $DIR/repr_packed.rs:48:33
   |
LL |         let z2: &mut u16 = &mut foo.y;
   |                                 ^^^^^

error: Min Capture analysis includes:
  --> $DIR/repr_packed.rs:43:5
   |
LL | /     || {
LL | |
LL | |
LL | |         let z1: &String = &foo.x;
...  |
LL | |         println!("({}, {})", z1, z2);
LL | |     };
   | |_____^
   |
note: Min Capture foo[] -> Mutable
  --> $DIR/repr_packed.rs:48:33
   |
LL |         let z2: &mut u16 = &mut foo.y;
   |                                 ^^^^^

error: First Pass analysis includes:
  --> $DIR/repr_packed.rs:76:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", foo.x);
...  |
LL | |     };
   | |_____^
   |
note: Capturing foo[] -> Immutable
  --> $DIR/repr_packed.rs:79:24
   |
LL |         println!("{}", foo.x);
   |                        ^^^^^
note: Capturing foo[(0, 0)] -> ByValue
  --> $DIR/repr_packed.rs:83:18
   |
LL |         let _z = foo.x;
   |                  ^^^^^

error: Min Capture analysis includes:
  --> $DIR/repr_packed.rs:76:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", foo.x);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture foo[] -> ByValue
  --> $DIR/repr_packed.rs:79:24
   |
LL |         println!("{}", foo.x);
   |                        ^^^^^ foo[] used here
...
LL |         let _z = foo.x;
   |                  ^^^^^ foo[] captured as ByValue here

error: aborting due to 6 previous errors

